# zellij-compact-bar

./: Cargo.toml  LICENSE  README.md  test.kdl
src/: line.rs  main.rs  tab.rs
