[package]
name = "compact-bar"
version = "0.3.0"
authors = ["Ben Yip <yebenmy@gmail.com>"]
edition = "2018"

[dependencies]
zellij-tile = "0.42.0"
zellij-tile-utils = "0.42.0"
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
chrono = { version = "0.4.39", features= ["unstable-locales", "clock"] }
chrono-tz = "0.10.1"
num_cpus = "1.16.0"
